# toyjs

./: Cargo.toml  README.md
docs/: event-loop.md  module-loading.md
js/: index.js
src/: add.rs  exec.rs  lib.rs  main.rs  runtime.rs  simple.rs
src/modules/: mod.rs
src/runtime/: bindings.rs  event_loop.rs  fetch.rs  timers.rs
