[package]
name = "toyjs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "addfn"
path = "src/add.rs"

[[bin]]
name = "exec"
path = "src/exec.rs"

[dependencies]
v8 = "142.2.0"
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
